--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ body {
 
 
 .project__description-title-animation h2::before {
-    content: "hover over";
+    content: "hover over!";
     position: absolute;
     top: -0.6rem;
     right: 0;
@@ -400,6 +400,7 @@ body {
     transition: transform 2s, opacity 2s;
     transform: translateX(-100%);
     opacity: 0;
+    overflow: hidden;
 
     .background-number {
         position: absolute;
@@ -412,9 +413,9 @@ body {
     }
 
     .front-text {
-        grid-area: 1 / 1 / 11 / 2;
+        grid-area: 1 / 1 / 9 / 2;
         place-self: center;
-        margin: 10%;
+        margin: 5% 10%;
         color: white;
         z-index: 2;
 
@@ -427,7 +428,6 @@ body {
 
         p {
             font-size: clamp(1rem, 1vw, 2rem);
-            ;
             font-weight: 200;
             padding: 1em 0;
         }
@@ -438,7 +438,7 @@ body {
     place-self: center;
     width: 100%;
     height: 70%;
-    border-radius: 100% 0 0 100%;
+    border-radius: 5vw 0 0 5vw;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -485,7 +485,7 @@ body {
 }
 
 .contact-divider {
-    padding: 0 0 10%;
+    padding: 10% 0;
 }
 
 .contact-divider-title{
