--- a/css/title-animation.css
+++ b/css/title-animation.css
@@ -4,7 +4,7 @@
 }
 
 .title-animation h2::before{
-  content: 'click!';
+  content: 'click any letter!';
   position: absolute;
   top: -0.6rem;
   right: 0;
