--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,10 @@ body {
 
 .contact-divider {
     padding: 10% 0;
+    overflow: hidden;
+    position: relative;
 }
+
 
 .contact-divider-title {
     transition: transform 2s, opacity 2s;
@@ -498,7 +501,24 @@ body {
 }
 
 .form-container {
-    background-color: black;
+    position: relative;
+    backdrop-filter: blur(3px);
+}
+
+
+.form-container::before {
+    content: "";
+    position: absolute;
+    width: 100vw;
+    height: 100vw;
+    background-image: url(../media/contact-mail.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    z-index: -1;
+
 }
 
 .form {
@@ -510,6 +530,7 @@ fieldset {
     border-radius: 0.25em;
     padding: 0;
     margin-top: 0.5em;
+    background-color: black;
 }
 
 legend,
