--- a/css/style.css
+++ b/css/style.css
@@ -172,10 +172,10 @@ body {
 
 .object-container {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
 }
 
 .divider {
@@ -493,6 +493,7 @@ body {
 
 
 .contact-divider-title {
+    z-index: 1;
     transition: transform 2s, opacity 2s;
     transform: scale(0.1) translateY(-800%);
     opacity: 0;
@@ -596,12 +597,6 @@ input:-webkit-autofill {
 
     }
 
-    .object-container {
-        top: 30%;
-        bottom: 20%;
-        height: 50%;
-    }
-
     .project__container::before {
         content: 'click!';
     }
@@ -609,7 +604,9 @@ input:-webkit-autofill {
     .divider {
         padding: 40% 0;
     }
-
+    .project__description-title-animation h2::before {
+        top: 1rem;
+        }
 }
 
 @media (max-width: 900px) {
@@ -633,7 +630,10 @@ input:-webkit-autofill {
             border-radius: 0;
         }
     }
+}
 
-
-
+@media (hover: none) and (pointer: coarse) {
+    .object-container {
+        height: 70%;
+    }
 }
