--- a/css/style.css
+++ b/css/style.css
@@ -583,7 +583,7 @@ input:-webkit-autofill {
 }
 
 
-@media only screen and (max-width: 550px) {
+@media (max-width: 550px) {
     .navbar {
         padding: 0 1em;
     }
@@ -639,5 +639,13 @@ input:-webkit-autofill {
 @media (hover: none) and (pointer: coarse) {
     .object-container {
         height: 70%;
+    }
+
+    .project__container::before {
+        content: 'press & hold!';
+    }
+
+    .project__description-title-animation h2::before {
+        content: 'press on!';
     }
 }
